# zkSBOM

./: .gitignore  LICENSE  README.md
sboms/: test_sbom_openssl.cdx.json
sboms/minimal/: 1024_components.json  128_components.json  16_components.json  1_component.json  256_components.json  2_components.json  32_components.json  3_components.json  4_components.json  512_components.json  64_components.json  8_components.json  avg_timing_generate_proof.txt  avg_timing_verify_proof.txt  generate-sboms.py  generate.py  run_analysis.py  timing_generate_commitment.txt  timing_generate_proof.txt  timing_verify_proof.txt  vulnerabilities.db
sboms/minimal/analysis_results/: avg_size_proof_file.txt  avg_timing_generate_commitment.txt  (+6 more)
sboms/real-world/: notes.md  sbom_error_notes.txt  sboms_db_paths.txt  upload_real_world_sboms.py  vulnerabilities.db
scripts/: extract_averages.py  extract_proof_file_size.py  extract_times_commitment.py  extract_times_generate_proof.py  extract_times_verify_proof.py
zksbom/: Cargo.toml  Dockerfile  README.md
zksbom-verifier/: Cargo.toml  README.md
zksbom-verifier/config/: config_template.toml
zksbom-verifier/src/: cli.rs  config.rs  hasher.rs  main.rs  merkle.rs
zksbom-verifier/src/method/: merkle_patricia_trie.rs  merkle_tree.rs  method_handler.rs  ozks.rs  sparse_merkle_tree.rs
zksbom/bak/: vulnerabilities.db.real_world.without_8_14.bak
zksbom/config/: config.toml  config_template.toml
zksbom/sboms/: test_sbom_openssl.cdx.json  xxxtest_sbom_openssl.cdx.jsonc
zksbom/src/: check_dependencies_crates_io.rs  cli.rs  config.rs  github_advisory_database_mapping.rs  hasher.rs  main.rs  map_dependencies_vulnerabilities.rs  upload.rs
zksbom/src/database/: db_commitment.rs  db_dependency.rs  db_ozks.rs  db_vulnerabilities.rs
zksbom/src/method/: merkle_patricia_trie.rs  merkle_tree.rs  method_handler.rs  ozks.rs  sparse_merkle_tree.rs
zksbom/static/: index.html
(+13 files in other folders)
