[package]
name = "zksbom-verifier"
version = "0.1.0"
authors = ["Tom Sorger <sorger@kth.se>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
binary-merkle-tree = "16.0.0"
sp-core = "35.0.0"
sp-runtime = "40.1.0"
hex = "0.4"
sparse-merkle-tree = "=0.6.1"
blake2b-rs = "0.2.0"
blake2 = "0.10"
serde_json = "1.0.140"
