[package]
name = "zksbom"
version = "0.1.0"
authors = ["Tom Sorger <sorger@kth.se>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
sp-core = "35.0.0"
sp-runtime = "40.1.0"
binary-merkle-tree = "16.0.0"
serde_json = "1.0.139"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.26"
once_cell = "1.21.3"
sparse-merkle-tree = "=0.6.1"
blake2b-rs = "0.2.0"
blake2 = "0.10"
rand = "0.9.1"
openssl = "=0.10.72"

hash-db = "0.16.0"
keccak-hasher = "0.16.0"
memory-db = "0.32.0"
reference-trie = "0.29.1"
trie-db = "0.27.1"
